<resources>
    <string name="app_name">GradeCalc</string>
    <string name="home_button_1">New Calculation</string>
    <string name="home_button_2">Load Calculation</string>
    <string name="About">About</string>
    <string name="title_activity_about_page">AboutPage</string>
    <string name="about_text_1">Grade Calculator</string>
    <string name="about_text_2">Made by Connor Smith</string>
    <string name="title_activity_grade_scale_edit">GradeScaleEdit</string>
    <string name="GradeScaletext1">Grade Scale</string>
    <string name="Save">Save</string>
    <string name="title_activity_assignments">Assignments</string>
    <string name="title_activity_grade_scale_saved">GradeScaleSaved</string>
    <string name="Edit">Edit</string>
    <string name="addLine">Add Line</string>
    <string name="line1">Line 1</string>
    <string name="line2">Line 2</string>
    <string name="line3">Line 3</string>
    <string name="Assignment">Assignment</string>
    <string name="item">Item</string>
    <string name="Total">Total: </string>
    <string name="title_activity_continue">Continue</string>
    <string name="Continue">Pick a Class to Continue:</string>
    <string name="title_activity_new_class">NewClass</string>
    <string name="next">Next</string>
    <string name="Tutorial">Tutorial</string>
    <string name="load">Load Class</string>
    <string name="nameclass">Name the Class</string>
    <string name="enterclass">Enter the Class Below:</string>
    <string name="submit">Submit</string>
    <string name="nameentererror">Name already taken, Enter another:</string>
    <string name="name">Name:</string>
    <string name="Delete">Delete</string>
    <string name="NewAssn">New Assignment</string>
    <string name="DelAssn">Delete Assignment</string>
    <string name="specFeatures">Special Features</string>
    <string name="deleteLine">Delete Line</string>
    <string name="score">Score:</string>
</resources>
