<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.umkc.connor.gradecalculator.Continue"
    tools:showIn="@layout/activity_continue">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Continue"
        android:id="@+id/cont_Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/cont_nameEdit"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="63dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/name"
        android:id="@+id/cont_Name"
        android:layout_alignTop="@+id/cont_nameEdit"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Delete"
        android:id="@+id/cont_Delete"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/cont_Title"
        android:onClick="delet" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_continue"
        android:id="@+id/cont_Continue"
        android:layout_alignTop="@+id/cont_Delete"
        android:layout_alignEnd="@+id/cont_Title"
        android:onClick="cont" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:id="@+id/cont_ListView"
        android:layout_below="@+id/cont_Title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:layout_alignParentEnd="false"
        android:layout_alignParentStart="false"
        android:layout_above="@+id/cont_nameEdit"
        android:focusable="true" />

</RelativeLayout>
