<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.umkc.connor.gradecalculator.Assignments"
    tools:showIn="@layout/activity_assignments">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView2"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/Total"
        android:id="@+id/textView4"
        android:layout_marginStart="18dp"
        android:layout_above="@+id/button6"
        android:layout_toEndOf="@+id/button6" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/NewAssn"
        android:id="@+id/button5"
        android:layout_alignBottom="@+id/textView4"
        android:layout_alignParentStart="true"
        android:onClick="addLine" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DelAssn"
        android:id="@+id/button6"
        android:onClick="deleteLine"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/button5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/AssnTextView"
        android:hint="100.00"
        android:gravity="right"
        android:layout_alignTop="@+id/textView4"
        android:layout_toEndOf="@+id/textView4"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="%"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/AssnTextView"
        android:layout_toEndOf="@+id/AssnTextView" />

</RelativeLayout>
